# pycountrycodes

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
pycountrycodes/: __init__.py
pycountrycodes/core/: __init__.py  binary_search.py  models.py
pycountrycodes/countries_3166_1/: __init__.py  models.py
pycountrycodes/currencies_4217/: __init__.py  models.py
pycountrycodes/subdivisions_3166_2/: __init__.py  models.py
pyiso3166/: __init__.py
pyiso3166/core/: __init__.py  models.py  utils.py
pyiso3166/countries_3166_1/: __init__.py  models.py
pyiso3166/subdivisions_3166_2/: __init__.py  models.py
src/pyiso3166/: __init__.py
src/pyiso3166/core/: __init__.py  binary_search.py  exceptions.py  models.py  utils.py
src/pyiso3166/countries/: __init__.py  models.py
src/pyiso3166/countries_3166_1/: models.py
src/pyiso3166/subdivisions/: __init__.py  models.py
src/pyiso3166/subdivisions_3166_2/: models.py
tests/pycountrycodes/core/: test_models.py
tests/pycountrycodes/countries_3166_1/: test_models.py
tests/pycountrycodes/currencies_4217/: test_models.py
tests/pycountrycodes/subdivisions_3166_2/: test_models.py
tests/pyiso3166/core/: test_models.py
tests/pyiso3166/countries/: test_models.py
tests/pyiso3166/subdivisions/: test_models.py
